--- a/lectures/week-9/index.html
+++ b/lectures/week-9/index.html
@@ -180,7 +180,43 @@ do{
         Document Object Model (DOM)
     </h2>
 
+    <br>
+
     <h4>
+        The Document Object Model was developed as a way to access the underlying structure of a Web document (web page). It's a set of rules implemented by every web browser to allow languages such as Javascript to access the elements on the page and modify their properties such as color and positioning.
+        <br>
+        <br>
+        Essentially, what you see as a bunch of pictures and pieces of text that are just being placed sequentially from top to bottom are actually a part of a tree of elements that together creates the hierarchy of the web page.
+        <br>
+        <br>
+        <div style="text-align: center">
+            <img src="images/dom-tree.gif">
+        </div>
+        <br>
+        There are several functions that you can use to find elements and modify or add new behaviors to them. Learning them all will take time and practice so it helps to have a goal you are trying to reach such as create a picture that will move to each corner and then doing some research to see what properties are available on an image such as x and y position.
+        <br>
+        <br>
+        Let's look at the following links for some demos
+    </h4>
+
+    <a href="https://www.w3schools.com/js/js_htmldom_methods.asp">
+        <h3>getElementById()</h3>
+    </a>
+    <a href="https://www.w3schools.com/js/js_htmldom_document.asp">
+        <h3>document</h3>
+    </a>
+    <a href="https://www.w3schools.com/js/js_htmldom_elements.asp">
+        <h3>getElementsByTagName()</h3>
+    </a>
+    <a href="https://www.w3schools.com/js/js_htmldom_html.asp">
+        <h3>Element HTML and Attributes</h3>
+    </a>
+    <a href="https://www.w3schools.com/js/js_htmldom_css.asp">
+        <h3>CSS</h3>
+    </a>
+
+    <h4>
+
     </h4>
 
     <hr>
