--- a/lectures/week-10/index.html
+++ b/lectures/week-10/index.html
@@ -20,6 +20,7 @@
         fetch('../nav.html')
             .then(response => response.text())
             .then(text => document.getElementById('#nav').innerHTML = text);
+
     </script>
 
     <h1 class="row justify-content-center" style="padding-top: 100px;">
@@ -136,7 +137,7 @@
             <li><a href="examples/2" target="_blank">Example 2</a></li>
             <li><a href="examples/3/final/" target="_blank">Example 3</a></li>
             <li><a href="examples/4" target="_blank">Example 4</a></li>
-            <li><a href="examples/5/intro.html" target="_blank">Example 5</a></li>
+            <li><a href="examples/5/homework/final/intro.html" target="_blank">Example 5</a></li>
         </ul>
 
     </h4>
@@ -172,4 +173,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-</body></html>
+</body>
+
+</html>
